<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margins"
    app:layout_constraintBottom_toTopOf="@id/card_bottom"
    app:layout_constraintEnd_toStartOf="@id/card_end"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="@id/card_start"
    app:layout_constraintTop_toBottomOf="@id/card_top"
    app:layout_constraintVertical_bias="1.0">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/population_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33"/>

        <TextView
            android:id="@+id/voltage_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/voltage_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/card_middle"
            app:layout_constraintEnd_toEndOf="@id/population_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textSize="18sp"/>

        <android.support.constraint.Guideline
            android:id="@+id/card_middle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"/>

        <TextView
            android:id="@+id/voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/population_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_middle"
            tools:text="33454"/>

        <TextView
            android:id="@+id/frequency_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/frequency_title"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/card_middle"
            app:layout_constraintEnd_toStartOf="@id/area_end"
            app:layout_constraintStart_toStartOf="@+id/population_end"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.Guideline
            android:id="@+id/area_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68"/>

        <TextView
            android:id="@+id/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/area_end"
            app:layout_constraintStart_toStartOf="@+id/population_end"
            app:layout_constraintTop_toBottomOf="@+id/frequency_title"
            tools:text="354454543"/>

        <TextView
            android:id="@+id/plugs_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/plugs_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/card_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/area_end"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/plugs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/area_end"
            app:layout_constraintTop_toBottomOf="@+id/plugs_title"
            tools:text="EU"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>